WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160406
REGRESSION(
r198943
): drop-down menu navigation on fiddlevideo.com doesn't appear on iOS, works on OS X
https://bugs.webkit.org/show_bug.cgi?id=160406
Summary
REGRESSION(r198943): drop-down menu navigation on fiddlevideo.com doesn't app...
Antti Koivisto
Reported
2016-08-01 09:43:04 PDT
WKContentObservation mechanism is partially broken.
Attachments
patch
(12.82 KB, patch)
2016-08-01 09:58 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(13.05 KB, patch)
2016-08-01 10:33 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
patch
(14.22 KB, patch)
2016-08-01 11:16 PDT
,
Antti Koivisto
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(660.63 KB, application/zip)
2016-08-01 12:13 PDT
,
Build Bot
no flags
Details
patch
(13.08 KB, patch)
2016-08-01 12:54 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-08-01 09:57:29 PDT
rdar://problem/26310261
Antti Koivisto
Comment 2
2016-08-01 09:58:32 PDT
Created
attachment 285017
[details]
patch
Antti Koivisto
Comment 3
2016-08-01 10:33:48 PDT
Created
attachment 285020
[details]
patch
Simon Fraser (smfr)
Comment 4
2016-08-01 10:53:34 PDT
Comment on
attachment 285020
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=285020&action=review
> LayoutTests/ChangeLog:11 > + * fast/events/touch/click-event-suppression-on-content-change-expected.txt: Added. > + * fast/events/touch/click-event-suppression-on-content-change.html: Added.
Can you put the test in a new 'fast/content-observation' directory? I hope we'll add more. You'll need to skip the test everywhere except iso-simulator-wk2. Perhaps do that for the entire directory.
Antti Koivisto
Comment 5
2016-08-01 11:16:21 PDT
Created
attachment 285023
[details]
patch
Build Bot
Comment 6
2016-08-01 12:13:06 PDT
Comment on
attachment 285023
[details]
patch
Attachment 285023
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1793247
New failing tests: fast/content-observation/click-event-suppression-on-content-change.html
Build Bot
Comment 7
2016-08-01 12:13:10 PDT
Created
attachment 285025
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Antti Koivisto
Comment 8
2016-08-01 12:54:44 PDT
Created
attachment 285033
[details]
patch
Antti Koivisto
Comment 9
2016-08-01 13:52:10 PDT
https://trac.webkit.org/r203985
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug